Closed
Bug 1218952
Opened 10 years ago
Closed 10 years ago
Add support for tracking object tag embeds and enablejsapi for youtube videos
Categories
(Core :: Audio/Video: Playback, defect)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla45
People
(Reporter: qdot, Assigned: qdot)
References
Details
Attachments
(1 file, 2 obsolete files)
|
1.74 KB,
patch
|
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Youtube's documentation recommends using the SWFObject library for embedding flash videos. SWFObject generated an object node for embedding, meaning our current telemetry doesn't pick it up.
| Assignee | ||
Comment 1•10 years ago
|
||
Assignee: nobody → kyle
Attachment #8680848 -
Flags: review?(cpeterson)
Comment 2•10 years ago
|
||
Comment on attachment 8680848 [details] [diff] [review]
Patch 1 (v1) - Add youtube object embedding to youtube embed telemetry
Review of attachment 8680848 [details] [diff] [review]:
-----------------------------------------------------------------
LGTM as per our email discussion.
::: dom/base/nsObjectLoadingContent.cpp
@@ +1480,3 @@
> NS_ASSERTION(thisContent, "Must be an instance of content");
>
> // We're only interested in switching out embed tags
This comment is now incorrect. :)
Attachment #8680848 -
Flags: review?(cpeterson) → review+
| Assignee | ||
Comment 3•10 years ago
|
||
Actually, this is still checking for /all/ embed and object tags, not just ones that use embedjsapi. So I'll need one more revision of the patch.
| Assignee | ||
Updated•10 years ago
|
Summary: Add support for tracking object tag embeds for youtube videos → Add support for tracking object tag embeds and enablejsapi for youtube videos
| Assignee | ||
Comment 4•10 years ago
|
||
Attachment #8680848 -
Attachment is obsolete: true
Attachment #8681459 -
Flags: review?(cpeterson)
| Assignee | ||
Updated•10 years ago
|
Attachment #8681459 -
Attachment description: Patch 1 (v1) - Add youtube object embedding and enablejsapi to youtube embed telemetry → Patch 1 (v2) - Add youtube object embedding and enablejsapi to youtube embed telemetry
| Assignee | ||
Comment 5•10 years ago
|
||
Added the enablejsapi checking too.
Comment 6•10 years ago
|
||
Comment on attachment 8681459 [details] [diff] [review]
Patch 1 (v2) - Add youtube object embedding and enablejsapi to youtube embed telemetry
Review of attachment 8681459 [details] [diff] [review]:
-----------------------------------------------------------------
LGTM!
::: dom/base/nsObjectLoadingContent.cpp
@@ +1509,1 @@
> return true;
Personally, I find double negative conditional like `!= kNotFound` hard to read. If you changed to `== kNotFound`, then this early return could return false like every other early return in this function. Then the only `return true` needed would be the end of the function.
Attachment #8681459 -
Flags: review?(cpeterson) → review+
| Assignee | ||
Comment 8•10 years ago
|
||
Need checkin on this as I don't have a registered ssh key handy. :/
Keywords: checkin-needed
Keywords: checkin-needed
Comment 10•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Comment 11•10 years ago
|
||
| bugherder uplift | ||
status-b2g-v2.5:
--- → fixed
Comment 12•10 years ago
|
||
Comment on attachment 8681550 [details] [diff] [review]
Patch 1 (v3) - Add youtube object embedding and enablejsapi to youtube embed telemetry; r=cpeterson
Approval Request Comment
[Feature/regressing bug #]: N/A
[User impact if declined]: We will have to wait longer before we have enough telemetry to know whether it is safe and worthwhile to rewrite embedded YouTube videos to use HTML5 video instead of Flash. This will help us reduce the use of Flash.
[Describe test coverage new/current, TreeHerder]: Patch has been on central for two days.
[Risks and why]: Very low risk because we are already reporting this YOUTUBE_EMBED_SEEN telemetry in Aurora 44 and Beta 43. This patch reduces how much telemetry we report.
[String/UUID change made/needed]: N/A
Attachment #8681550 -
Flags: approval-mozilla-beta?
Attachment #8681550 -
Flags: approval-mozilla-aurora?
Updated•10 years ago
|
status-firefox43:
--- → affected
status-firefox44:
--- → affected
Comment 13•10 years ago
|
||
Comment on attachment 8681550 [details] [diff] [review]
Patch 1 (v3) - Add youtube object embedding and enablejsapi to youtube embed telemetry; r=cpeterson
Anything to kill flash! Taking it.
Should be in 43 beta 2.
Attachment #8681550 -
Flags: approval-mozilla-beta?
Attachment #8681550 -
Flags: approval-mozilla-beta+
Attachment #8681550 -
Flags: approval-mozilla-aurora?
Attachment #8681550 -
Flags: approval-mozilla-aurora+
Comment 14•10 years ago
|
||
Kyle, Could you consider writing a test for this if possible? Thanks
Flags: needinfo?(kyle)
Comment 15•10 years ago
|
||
| bugherder uplift | ||
Comment 16•10 years ago
|
||
| bugherder uplift | ||
Comment 17•10 years ago
|
||
| bugherder uplift | ||
| Assignee | ||
Comment 18•10 years ago
|
||
Clearing ni? here as testing question moved to bug 1229971
| Assignee | ||
Updated•10 years ago
|
Flags: needinfo?(kyle)
You need to log in
before you can comment on or make changes to this bug.
Description
•