Bug 1218952 - Add support for object tags to youtube telemetry tracking; r=cpeterson, a=sylvestre